RESOLVED FIXED77769
[BlackBerry] Let userIdleTime() return maximum number instead of 0.
https://bugs.webkit.org/show_bug.cgi?id=77769
Summary [BlackBerry] Let userIdleTime() return maximum number instead of 0.
Yong Li
Reported 2012-02-03 13:11:43 PST
Let userIdleTime() return maximum number instead of 0 as most of other ports do, so it won't block page cache from releasing cached pages.
Attachments
the patch (1.49 KB, patch)
2012-02-03 13:33 PST, Yong Li
no flags
Yong Li
Comment 1 2012-02-03 13:33:27 PST
Created attachment 125398 [details] the patch
Rob Buis
Comment 2 2012-02-03 13:42:30 PST
Comment on attachment 125398 [details] the patch LGTM.
WebKit Review Bot
Comment 3 2012-02-03 14:52:24 PST
Comment on attachment 125398 [details] the patch Clearing flags on attachment: 125398 Committed r106697: <http://trac.webkit.org/changeset/106697>
WebKit Review Bot
Comment 4 2012-02-03 14:52:28 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.