[BlackBerry] Let userIdleTime() return maximum number instead of 0 as most of other ports do. https://bugs.webkit.org/show_bug.cgi?id=77769

Patch by Yong Li <yoli@rim.com> on 2012-02-03
Reviewed by Rob Buis.

userIdleTime() should return a big number so it won't block page cache
from releasing cached pages. See PageCache::releaseAutoreleasedPagesNowOrReschedule().

No new tests as no visible functional changes.

* platform/blackberry/SystemTimeBlackBerry.cpp:
(WebCore::userIdleTime):

Canonical link: https://commits.webkit.org/94633@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106697 268f45cc-cd09-0410-ab3c-d52691b4dbfc