Source/WebCore/platform/blackberry/SystemTimeBlackBerry.cpp
@@ -21,13 +21,15 @@
 #include "SystemTime.h"
 
 #include "NotImplemented.h"
+#include <limits>
 
 namespace WebCore {
 
 float userIdleTime()
 {
     notImplemented();
-    return 0;
+    // return an arbitrarily high userIdleTime so that releasing pages from the page cache isn't postponed.
+    return std::numeric_limits<float>::max();
 }
 
 } // namespace WebCore
